# publicportfolio

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: github.py
data_handling/: content.py
pages/: about.py  contact.py  expertise.py  footer.py  hero.py  leadership.py  nav.py  philosophy.py  projects.py
theme/: theme.py
