[project]
name = "portfolio"
version = "0.1.0"
description = "Analytics & Data Science Lead Portfolio"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.44",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
